<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/please_enter_your_name"/>

            <TextView
                android:id="@+id/mobileTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobile_number" />

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/please_enter_your_mobile_number"
                android:inputType="number" />

            <TextView
                android:id="@+id/amountTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/size_of_the_group" />

            <EditText
                android:id="@+id/amountET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/please_enter_the_size_of_your_company"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="calendar"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>

            <CheckBox
                android:id="@+id/smokingcb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smoking_table" />

            <Button
                android:id="@+id/confirmbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm" />

            <Button
                android:id="@+id/resetbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <TextView
                android:id="@+id/outputTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
